Fix search input z-index.

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   transform: scale(0);
   transform-origin: left bottom;
   transition: all 0.2s var(--bezier-with-bounce);
-  z-index: 2000;
+  z-index: 1001;
 
   box-shadow: -3px -3px 12px rgba(0, 0, 0, 0.5);
 }
@@ -175,7 +175,7 @@ body {
 
   transition: all 0.25s ease-in-out;
   display: block;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .library-search-container:focus-within,
@@ -1083,7 +1083,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
 
-  z-index: 9999;
+  z-index: 999;
 }
 
 .search-result-card {
